# photomanager

./: .cproject  .gitignore  .project  CMakeLists.txt  CONTRIBUTING.MD  CONTRIBUTORS.MD  LICENSE.MD  Makefile  README.MD  doxy.config  index.html
documentation/: Diagram1.dia  roadmap.md
src/camera/: CMakeLists.txt  MainWindow.glade  MainWindow.hh  main.cc
src/daemon/: CMakeLists.txt  Database.hh  DirectoryScanner.hh  FileDatabase.hh  ImageDetails.hh  cmd-parser.cc  cmd-parser.hh  daemon.cc  dbtest.cc  dbus-service.cc  dbus-service.hh  recognizer.cc  recognizer.hh
src/manager/: CMakeLists.txt  gui.glade  main.cc  mainWindow.hh  manager.glade  myarea.hh  proxy.hh
